--- a/index.html
+++ b/index.html
@@ -16,24 +16,7 @@
     </ul>
  </header>
  <main>
-  <section>
-   <h3 id="About me">About me</h3>
-  </section>
-  <section>
-   <h3 id="Skills">Skills</h3>
-  </section>
-  <section>
-   <h3 id="Code">Code</h3>
-  </section>
-  <section>
-   <h3 id="Working experience">Working experience</h3>
-  </section>
-  <section>
-   <h3 id="Education">Education</h3>
-  </section>
-  <section>
-   <h3 id="Languages">Languages</h3>
-  </section>
+    <p>Hello</p>
 </main>
 <footer class="footer">
   <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" width="75" height="75" alt="logo rsschool"></a>
